# world_imaker

./: .gitignore  CMakeLists.txt  Makefile  Project.cbp  README.md  main.cpp
lib/glimac/: CMakeLists.txt
lib/glimac/include/glimac/: Cube.hpp  FreeflyCamera.hpp  GenericCamera.hpp  Image.hpp  Pattern.hpp  Programme.hpp  Quad.hpp  SDLWindowManager.hpp  TrackballCamera.hpp  common.hpp
lib/glimac/src/: Cone.cpp  Cube.cpp  FreeflyCamera.cpp  Pattern.cpp  Programme.cpp  Quad.cpp  SDLWindowManager.cpp  Sphere.cpp  TrackballCamera.cpp
modules/: FindEigen3.cmake
resources/shaders/: 3D.vs.glsl  Coloured3D.vs.glsl  Textured3D.vs.glsl  framebuffer.fs.glsl  framebuffer.vs.glsl  hidden.fs.glsl  multiLights.fs.glsl  multiLights.glsl  multilights.fs.glsl  shaders.conf  tex3D.fs.glsl  wireframe.fs.glsl  wireframe3D.vs.glsl
resources/textures/: textures.conf
src/wim/include/: Colour.hpp  Cube.hpp  CubeStack.hpp  CubeWorld.hpp  Displayable.hpp  Displayer.hpp  Exception.hpp  Point3D.hpp  Randomisable.hpp  Randomiser.hpp  Vec3D.hpp  Window.hpp
src/wim/include/wim/: BufferData.hpp  BufferManager.hpp  BufferObject.hpp  CameraManager.hpp  Colour.hpp  CommonDisplay.hpp  CommonPath.hpp  CommunDisplay.hpp  CommunPath.hpp  Controller.hpp  Cube.hpp  CubeStack.hpp  CubeWorld.hpp  Cursor.hpp  Displayable.hpp  Displayer.hpp  Exception.hpp  FBO.hpp  ITO.hpp  Interface.hpp  Light.hpp  Listener.hpp  Material.hpp  Model.hpp  OmegaFunctor.hpp  PatternManager.hpp  ProceduralGenerator.hpp  Quad.hpp  RBF.hpp  RadialFunctor.hpp  Randomisable.hpp  Randomiser.hpp  SSBO.hpp  SceneRenderer.hpp  Selectable.hpp  Selection.hpp  ShaderLoader.hpp  ShaderManager.hpp  ShaderSender.hpp  TextureManager.hpp  (+7 more)
src/wim/src/: BufferManager.cpp  BufferObject.cpp  CameraManager.cpp  Colour.cpp  Controller.cpp  Cube.cpp  CubeStack.cpp  CubeWorld.cpp  Cursor.cpp  Displayable.cpp  Displayer.cpp  FBO.cpp  ITO.cpp  Interface.cpp  Light.cpp  Listener.cpp  Material.cpp  PatternManager.cpp  Point3D.cpp  ProceduralGenerator.cpp  Quad.cpp  RadialFunctor.cpp  SSBO.cpp  SceneRenderer.cpp  Selection.cpp  ShaderLoader.cpp  ShaderManager.cpp  ShaderSender.cpp  TextureManager.cpp  Uniform.cpp  Vec3D.cpp
